# tpay

./: README.md  config.py  polling_mode.py  pyproject.toml  template.env
db_infra/: db.py
src/: config.py  main.py  polling_mode.py
src/db_infra/: db.py
src/polling/: checker.py
src/t_payment/: models.py  t_payment.py
t_payment/: models.py  t_payment.py
tests/: conftest.py  test_integration_main_checker.py  test_module_db.py  test_module_t_payment.py  test_t_payment.py
